# CoreVecDB

./: .gitignore  CLAUDE.md  Cargo.toml  benchmark.py  benchmark_full.py  build.rs  config.toml  search.json  test_batch.py  test_client.py  test_compaction.py  test_delete.py  test_filter.py  test_metrics.py  test_payload_curl.sh  test_payload_index.py  test_range_filter.py  test_range_query.sh  test_replication.py  test_snapshot.py  test_streaming.py  test_update.py  upsert.json
src/: config.rs  lib.rs  main.rs
src/api/: http.rs  mod.rs
src/cache/: filter_cache.rs  mod.rs  query_cache.rs
src/collection/: mod.rs
src/diskann/: mod.rs
src/gpu/: mod.rs
src/hnswpp/: mod.rs
src/index/: adaptive.rs  dynamic.rs  layer_cache.rs  mod.rs  multi_vector.rs  prewarm.rs
src/ivfpq/: mod.rs
src/metrics/: mod.rs
src/navix/: mod.rs
src/payload/: mod.rs
src/proto/: mod.rs  vectordb.proto
src/quantization/: mod.rs  pq.rs
src/query/: mod.rs  planner.rs
src/rabitq/: mod.rs
src/replication/: mod.rs
src/sharding/: mod.rs
src/simd/: mod.rs
src/sparse/: mod.rs
src/storage/: compression.rs  mod.rs  segmented.rs  tiered.rs
src/text/: mod.rs
src/versioning/: mod.rs
src/wal/: mod.rs
ui/: app.js  index.html  style.css
