[package]
name = "vectordb"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core Logic
hnsw_rs = "0.3"
ndarray = "0.15"  # Often needed with hnsw-rs/faiss

# Storage & Persistence
sled = "0.34"
memmap2 = "0.9"

# Filtering
roaring = "0.10"

# Networking & Async
tokio = { version = "1.36", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.11"
prost = "0.12"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging & Observability
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
anyhow = "1.0"
crc32fast = "1.4"
thiserror = "1.0"
parking_lot = "0.12"
rayon = "1.8"
config = "0.13"
lru = "0.12"
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3"
futures = "0.3"
rand = "0.8"

# Metrics
prometheus = "0.13"
lazy_static = "1.4"
once_cell = "1.19"

[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "3.0"

[dev-dependencies]
tempfile = "3.10"
